// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCardField should render correctly 1`] = `
<DocumentFragment>
  .cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement label {
  display: none;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-1g3aymm-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='true'] {
  padding-left: 32px;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='false'] {
  display: contents;
}

<form
    novalidate=""
  >
    <div
      class="cache-1ls95ey-Stack-Container e1s5n3hj3"
      data-checked="false"
      data-disabled="false"
      data-error="false"
      data-has-label="false"
      data-type="radio"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj4 cache-1nauh8c-RadioContainer-StyledRadio-StyledElement ehkrmld2"
          data-checked="false"
          data-error="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-1ghsgz8-RadioInput ehkrmld3"
            id="test-test"
            name="test"
            type="radio"
            value="test"
          />
          <svg
            class="cache-1dyk1l0-Ring ehkrmld4"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld5"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="cache-1g3aymm-Stack-StyledStack e1s5n3hj2"
        data-has-label="false"
      >
        Radio field
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement label {
  display: none;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-1g3aymm-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='true'] {
  padding-left: 32px;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='false'] {
  display: contents;
}

<form
    novalidate=""
  >
    <div
      class="cache-1ls95ey-Stack-Container e1s5n3hj3"
      data-checked="true"
      data-disabled="false"
      data-error="false"
      data-has-label="false"
      data-type="radio"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj4 cache-1nauh8c-RadioContainer-StyledRadio-StyledElement ehkrmld2"
          data-checked="true"
          data-error="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="cache-1ghsgz8-RadioInput ehkrmld3"
            id="test-checked"
            name="test"
            type="radio"
            value="checked"
          />
          <svg
            class="cache-1dyk1l0-Ring ehkrmld4"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld5"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="cache-1g3aymm-Stack-StyledStack e1s5n3hj2"
        data-has-label="false"
      >
        Radio field checked
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement label {
  display: none;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-1g3aymm-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='true'] {
  padding-left: 32px;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='false'] {
  display: contents;
}

<form
    novalidate=""
  >
    <div
      class="cache-1ls95ey-Stack-Container e1s5n3hj3"
      data-checked="false"
      data-disabled="true"
      data-error="false"
      data-has-label="false"
      data-type="radio"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          aria-disabled="true"
          class="e1s5n3hj4 cache-1nauh8c-RadioContainer-StyledRadio-StyledElement ehkrmld2"
          data-checked="false"
          data-error="false"
        >
          <input
            aria-disabled="true"
            aria-invalid="false"
            class="cache-1ghsgz8-RadioInput ehkrmld3"
            disabled=""
            id="test-disabled"
            name="test"
            type="radio"
            value="disabled"
          />
          <svg
            class="cache-1dyk1l0-Ring ehkrmld4"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld5"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="cache-1g3aymm-Stack-StyledStack e1s5n3hj2"
        data-has-label="false"
      >
        Radio field disabled
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement label {
  display: none;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-1g3aymm-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='true'] {
  padding-left: 32px;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='false'] {
  display: contents;
}

<form
    novalidate=""
  >
    <div
      class="cache-1ls95ey-Stack-Container e1s5n3hj3"
      data-checked="false"
      data-disabled="false"
      data-error="true"
      data-has-label="false"
      data-type="radio"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj4 cache-1nauh8c-RadioContainer-StyledRadio-StyledElement ehkrmld2"
          data-checked="false"
          data-error="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="true"
            class="cache-1ghsgz8-RadioInput ehkrmld3"
            id="test-checked"
            name="test"
            type="radio"
            value="checked"
          />
          <svg
            class="cache-1dyk1l0-Ring ehkrmld4"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld5"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="cache-1g3aymm-Stack-StyledStack e1s5n3hj2"
        data-has-label="false"
      >
        Radio field error
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1nauh8c-RadioContainer-StyledRadio-StyledElement label {
  display: none;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-1g3aymm-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='true'] {
  padding-left: 32px;
}

.cache-1g3aymm-Stack-StyledStack[data-has-label='false'] {
  display: contents;
}

<form
    novalidate=""
  >
    <div
      class="cache-1ls95ey-Stack-Container e1s5n3hj3"
      data-checked="true"
      data-disabled="false"
      data-error="false"
      data-has-label="false"
      data-type="radio"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj4 cache-1nauh8c-RadioContainer-StyledRadio-StyledElement ehkrmld2"
          data-checked="true"
          data-error="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-1ghsgz8-RadioInput ehkrmld3"
            id="test-events"
            name="test"
            type="radio"
            value="events"
          />
          <svg
            class="cache-1dyk1l0-Ring ehkrmld4"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld5"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="cache-1g3aymm-Stack-StyledStack e1s5n3hj2"
        data-has-label="false"
      >
        Radio field events
      </div>
    </div>
  </form>
</DocumentFragment>
`;
